*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 0.5.4 ===

=== 0.5.3 ===
* Updated build scripts that now use tags without prefixes first.
* Updated headers and license files to match LGPL3+ license.
* Updated make files to produce static library, pkgconf file and source tree.

=== 0.5.2 ===
* Build updates.

=== 0.5.1 ===
* Modified base R3D interface constants and metadata structures.

=== 0.5.0 ===
* Initial release.
* Base 3D rendering backend.
* Common 3D rendering backend implementation.
